fixes! Color contrast

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -113,7 +113,7 @@ slider-component {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
-  border: 0.1rem solid rgba(var(--color-foreground), 0.3);
+  border: 0.1rem solid rgba(var(--color-foreground), 0.5);
   padding: 0;
   display: block;
 }
@@ -123,7 +123,7 @@ slider-component {
 }
 
 .slider-counter__link--dots:not(.slider-counter__link--active):hover .dot {
-  background-color: rgba(var(--color-foreground), 0.3);
+  background-color: rgba(var(--color-foreground), 0.5);
   border: 0;
 }
 
